# audio_transcription

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  __init__.py  asset.py  cloudinary_handler.py  main.py  redis_handler.py
app/api/: __init__.py
app/api/handlers/: __init__.py  cloudinary.py
app/services/: redis_enqueue_handler.py  redis_handler.py
notebooks/: dev.ipynb
whisper_service/: Dockerfile  main.py
whisper_service/services/: redis_dequeue_handler.py
