[tool.poetry]
name = "audio_transcription"
version = "0.1.0"
description = "Audio transcription service using Whisper"
package-mode = false
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
redis = "^5.0.1"
openai-whisper = "^20240930"
jupyter = "^1.1.1"
requests = "^2.32.3"
cloudinary = "^1.44.0"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
